zerowaste-api/src/main/java/com/example/zerowaste_api/common/error/NotificationErrorConstant.java
package com.example.zerowaste_api.common.error;

public class NotificationErrorConstant {
    public static final String NOTIFICATION_NOT_FOUND = "notification.notFound";
}
